Add completing advertisement
